--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -35,4 +36,27 @@ body{
 .header-container-menu > img{
     width: 17px;
     height: auto;
+}
+.content{
+    width: 100%;
+    height: 100%;
+}
+.content-banner{
+    width: 100%;
+    height: 300px;
+    background-image: url(assets/banner.png);
+    background-position: center;
+    /* background-size: cover; */
+    margin-bottom: 20px;
+}
+.content-main-descripition-container{
+    width: 100%;
+    border-bottom: 0.2px solid #e4e0e0;
+}
+.content-main-descripition{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
