--- a/style.css
+++ b/style.css
@@ -102,3 +102,85 @@ body{
     font-weight: 600;
     margin-left: 2px;
 }
+.footer-container{
+    width: 100%;
+    background-color: #F9F9F9;
+    margin-top: 80px;
+
+    
+}
+.footer-top{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    
+}
+.footer-top-right{
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    font-family: 'Lato', sans-serif;
+    color: black;
+}
+.footer-top-left{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Lato', sans-serif;
+}
+.footer-top-left-input{
+    margin-top: 10px;
+}
+.input{
+    width: 350px;
+    height: 34px;
+    padding-left: 8px;
+    border: 1px solid #aaa3a3;
+}
+button{
+    background-color: #5CA720;
+    height: 34px;
+    width: 100px;
+    border: none;
+    color: #FFFFFF;
+    font-family: 'Lato', sans-serif;
+}
+.footer-bottom-container{
+    width: 100%;
+    border-top: 2px solid #c7c0c0;
+}
+.footer-bottom{
+    width: 90%;
+    margin: auto;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-bottom-left{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    
+}
+.footer-bottom-left{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    gap: 20px;
+}
+.footer-image-top{
+    width: 25px;
+}
+.footer-image{
+    width: 35px;
+    margin-right: 10px;
+}
+.footer-image-paypal{
+    width: 20px;
+    margin-right: 10px;
+}
